style.css
/* Font Import */
@import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Archivo&display=swap');

*,
*:before,
:after{
    box-sizing: inherit;
    margin: 0;
    padding: 0;
}

html {
    overflow: hidden;
    font-size: 16px;
}

a {
    text-decoration: none;
    color: #f7ecc2;
}

ul {
    list-style: none;
}

a:hover {
    color: #fffdf6;
}

body {
    box-sizing: border-box;
    height: 100vh;
    display: flex;
    font-family: 'Archivo', sans-serif;
    background: linear-gradient(261deg, rgba(238,238,238,1) 0%, rgba(255,255,255,1) 50%, rgba(238,238,238,1) 100%); }

.logo {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: .7rem;
    padding-top: 1.5rem;
}

.main-container {
    display: flex;
    gap: 1.85rem;
    width: 100%;
}

/* Sidebar */
.sidebar-container {
    background: linear-gradient(180deg, rgba(35,35,40,1) 0%, rgba(24,24,27,1) 100%);
    height: 100vh;
    width: 25rem;
    min-width: 10rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    color: #fef3c7;
    box-shadow: 1px 1px 8px 0px rgba(0,0,0,0.75);
}

/* Sidebar - Top */
.top-sidebar-menu {
    padding-top: 5rem;
    font-size: 1rem;
}

.top-sidebar-menu a {
    padding-left: 10px;
}

.top-sidebar-menu > *{
    vertical-align: center;
    line-height: 3.5rem;
}

/* Sidebar Menu - Hover */
li.menu-hover {
    width: 100%;
}
.menu-hover:hover {
    background-color: #262626;
    border-left: 4px solid #fef3c7;
    border-top: 1px solid rgb(45, 45, 45);
    border-bottom: 1px solid rgb(45, 45, 45);
    padding-right: 0;
}

.menu-hover:active {
    background-color: #262626;
    border-top: 1px solid rgb(45, 45, 45);
    border-bottom: 1px solid rgb(45, 45, 45);
}

/* Bottom Sidebar */
.bottom-sidebar {
    padding: 1rem;
    margin-bottom: 15px;
    display: flex;
    justify-content: space-around;
}

.bottom-hover:hover {
    color: #fffdf6;
    transform: scale(1.2);
}

/* Just for style to show off - static page */
li.selected {
    background-color: #262626;
    border-left: 4px solid #fef3c7;
    border-top: 1px solid rgb(45, 45, 45);
    border-bottom: 1px solid rgb(45, 45, 45);
}

a.selected {
    color: #fffdf6;
}

/* Main Content Area */
.content-container {
    display: flex;
    flex-direction: column;
    /* justify-content: space-between; */
    gap: 5rem;
    height: 100vh;
    width: 100%;
    margin-right: 1.85rem;
    font-family: 'Signika Negative', sans-serif;
    font-size: 16px;
}

/* Header */
.header {
    height: 4rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 16px;
}

.header h1 {
    padding: .5rem;
    font-family: 'Signika Negative', sans-serif;
}

.header-right {
    display: flex;
    align-items: center;
    gap: 2rem;
}

.circle {
    border: 1px solid black;
    width: 45px;
    height: 45px;
    border-radius: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Chart */
.chart-container {
    height: auto;
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    box-shadow: 1px 1px 22px -10px rgba(0,0,0,0.75);
    padding: 1rem;
}

.chart-header {
    width: 100%;
    padding-left: 1rem;
    font-size: 1.2rem;
}

.chart img {
    width: 100%;
    height: auto;
    padding: 0 15px;
}

/* Recent Searches */
.recent-searches {
    border: 2px solid #c3c3c3;
    border-radius: 5px;
    height: auto;
    width: 100%;
    padding: 1rem;
}

.recent-searches-header {
    font-size: 1.2rem;
    padding-left: 1rem;
    padding-bottom: .4rem;
    width: 100%;
    border-bottom: 1px solid rgb(148, 148, 148);
}

.recent-searches-list {
    display: flex;
    flex-direction: column;
    padding-top: 1rem;
    /* justify-content: center; */
}

.street-name {
    height: 3rem;
    display: flex;
    align-items: center;
    padding-left: .5rem;
    cursor: pointer;
    border-bottom: 1px solid rgb(231, 231, 231);
}

.street-name:hover {
    background-color: rgba(0,0,0,0.15);
}

